lib/src/flutter_caesium_ffi_bindings_generated.dart

// Generated file. Do not edit.
// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: public_member_api_docs

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:flutter_caesium_ffi/src/flutter_caesium_ffi_bindings_generated.dart',
)
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Uint32 Function()>()
external int fc_abi_version();

@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> fc_native_version();

@ffi.Native<
  ffi.Uint32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint64,
    ffi.Pointer<FcOptions>,
    ffi.Pointer<FcBuffer>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int fc_compress_memory(
  ffi.Pointer<ffi.Uint8> input_data,
  int input_length,
  ffi.Pointer<FcOptions> options,
  ffi.Pointer<FcBuffer> output,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
);

@ffi.Native<
  ffi.Uint32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint64,
    ffi.Uint64,
    ffi.Uint8,
    ffi.Pointer<FcOptions>,
    ffi.Pointer<FcBuffer>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int fc_compress_to_size_memory(
  ffi.Pointer<ffi.Uint8> input_data,
  int input_length,
  int max_output_size,
  int return_smallest,
  ffi.Pointer<FcOptions> options,
  ffi.Pointer<FcBuffer> output,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
);

@ffi.Native<
  ffi.Uint32 Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Uint64,
    ffi.Uint32,
    ffi.Pointer<FcOptions>,
    ffi.Pointer<FcBuffer>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int fc_convert_memory(
  ffi.Pointer<ffi.Uint8> input_data,
  int input_length,
  int output_format,
  ffi.Pointer<FcOptions> options,
  ffi.Pointer<FcBuffer> output,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
);

@ffi.Native<
  ffi.Uint32 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<FcOptions>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int fc_compress_file(
  ffi.Pointer<ffi.Char> input_path,
  ffi.Pointer<ffi.Char> output_path,
  ffi.Pointer<FcOptions> options,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
);

@ffi.Native<
  ffi.Uint32 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Uint64,
    ffi.Uint8,
    ffi.Pointer<FcOptions>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int fc_compress_to_size_file(
  ffi.Pointer<ffi.Char> input_path,
  ffi.Pointer<ffi.Char> output_path,
  int max_output_size,
  int return_smallest,
  ffi.Pointer<FcOptions> options,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
);

@ffi.Native<
  ffi.Uint32 Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Uint32,
    ffi.Pointer<FcOptions>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
  )
>()
external int fc_convert_file(
  ffi.Pointer<ffi.Char> input_path,
  ffi.Pointer<ffi.Char> output_path,
  int output_format,
  ffi.Pointer<FcOptions> options,
  ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<FcBuffer>)>()
external void fc_buffer_free(ffi.Pointer<FcBuffer> buffer);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Char>)>()
external void fc_string_free(ffi.Pointer<ffi.Char> string);

/// Image formats accepted by conversion functions.
enum FcImageFormat {
  FC_FORMAT_JPEG(0),
  FC_FORMAT_PNG(1),
  FC_FORMAT_GIF(2),
  FC_FORMAT_WEBP(3),
  FC_FORMAT_TIFF(4);

  final int value;
  const FcImageFormat(this.value);

  static FcImageFormat fromValue(int value) => switch (value) {
    0 => FC_FORMAT_JPEG,
    1 => FC_FORMAT_PNG,
    2 => FC_FORMAT_GIF,
    3 => FC_FORMAT_WEBP,
    4 => FC_FORMAT_TIFF,
    _ => throw ArgumentError('Unknown value for FcImageFormat: $value'),
  };
}

/// Fixed-width configuration shared by every operation.
final class FcOptions extends ffi.Struct {
  @ffi.Uint8()
  external int keep_metadata;

  @ffi.Uint32()
  external int jpeg_quality;

  @ffi.Uint32()
  external int jpeg_chroma_subsampling;

  @ffi.Uint8()
  external int jpeg_progressive;

  @ffi.Uint8()
  external int jpeg_optimize;

  @ffi.Uint8()
  external int jpeg_preserve_icc;

  @ffi.Uint32()
  external int png_quality;

  @ffi.Uint32()
  external int png_optimization_level;

  @ffi.Uint8()
  external int png_force_zopfli;

  @ffi.Uint8()
  external int png_optimize;

  @ffi.Uint32()
  external int gif_quality;

  @ffi.Uint32()
  external int webp_quality;

  @ffi.Uint8()
  external int webp_lossless;

  @ffi.Uint32()
  external int tiff_compression;

  @ffi.Uint32()
  external int tiff_deflate_level;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;
}

/// Rust-owned output buffer. Release it with fc_buffer_free.
final class FcBuffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Uint64()
  external int length;

  @ffi.Uint64()
  external int capacity;
}

const int FC_ABI_VERSION = 1;

const int FC_OK = 0;

const int FC_ERROR_INVALID_ARGUMENT = 20001;

const int FC_ERROR_INVALID_UTF8 = 20002;

const int FC_ERROR_OUTPUT_EXISTS = 20003;

const int FC_ERROR_SAME_PATH = 20004;

const int FC_ERROR_PANIC = 20999;
